# speech-dataset-workbench

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  auditing.md  usage.md
docs/adr/: 0001-identifier-scheme.md  0002-stateless-data-in-data-out.md  0003-storage-layout-naming-retention.md  0004-session-aware-splitting.md  0005-input-formats-and-normalization-target.md  0006-output-manifest-format.md  0007-audio-validation-quality-checks.md  0008-testing-strategy-and-synthetic-fixtures.md  0009-seed-example-data.md  0010-dataset-version-and-provenance.md  0011-visualization-output.md  0012-v0-1-acceptance-criteria.md  0013-recordings-csv-ingest-and-duplicate-resolution.md  0014-build-backend-and-installed-entry-point.md  README.md
docs/agents/: code-comments.md  domain.md
docs/design/: adversarial-code-review-orchestrator.md
docs/prototype/: orchestration-driver.md
examples/: README.md  __init__.py  generate.py
examples/data-in/: recordings.csv
src/sdw/: __init__.py  __main__.py  cli.py  commit.py  config.py  errors.py  images.py  ingest.py  manifest.py  normalize.py  pipeline.py  provenance.py  quality.py  reports.py  serialization.py  split.py  staging.py
tests/: __init__.py  synth.py
tests/e2e/: test_aborts.py  test_atomicity.py  test_audit_recipe.py  test_entry_point.py  test_example_build.py  test_reference_golden.py  test_soft_flags.py
tests/fixtures/reference/: recordings.csv
tests/fixtures/reference/golden/: dataset.json  dataset_version  test.jsonl  train.jsonl  val.jsonl
tests/fixtures/reference/golden/reports/: quality.jsonl  summary.txt
tests/unit/: test_cli.py  test_commit.py  test_config.py  test_example_data.py  test_images.py  test_ingest.py  test_manifest.py  test_normalize.py  test_pipeline_commit.py  test_pipeline_images.py  test_pipeline_reports.py  test_privacy_allowlist.py  test_provenance.py  test_quality.py  test_reference_tree.py  test_reports.py  test_serialization.py  test_split.py  test_staging.py  test_synth.py
