[project]
name = "sdw"
version = "0.1.0"
description = "Speech Dataset Workbench — a local-first CLI that turns prompted speech recordings into a validated, reproducible, versioned dataset."
requires-python = ">=3.13"
dependencies = [
    "soundfile",
    "soxr", # python-soxr; `soxr` is its distribution name on PyPI
    "numpy",
    "scipy",
    "matplotlib",
]

# No build backend: the tool is invoked as `python -m sdw`, never installed (ADR-0012).

[dependency-groups]
dev = [
    "ruff==0.14.4",
    "mypy==1.19.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
]

[tool.uv]
package = false

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["soundfile.*", "soxr.*", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=sdw --cov-report=term-missing"
