[project]
name = "sdw"
# `version` lives once in `src/sdw/__init__.py` and is derived here at build time (#37). It is a
# `dataset_version` hash input, so it must read the source tree, not the install (ADR-0010); deriving
# rather than duplicating means `importlib.metadata.version("sdw")` still answers correctly.
dynamic = ["version"]
description = "Speech Dataset Workbench — a local-first CLI that turns prompted speech recordings into a validated, reproducible, versioned dataset."
requires-python = ">=3.13"
dependencies = [
    "soundfile",
    "soxr", # python-soxr; `soxr` is its distribution name on PyPI
    "numpy",
    "scipy",
    "matplotlib",
]

# `uv sync` installs the package (editable) into `.venv`, so nothing needs `src/` on the path
# (ADR-0014, amending ADR-0012). `python -m sdw` keeps working alongside this.
[project.scripts]
sdw = "sdw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sdw/__init__.py"

[dependency-groups]
dev = [
    "ruff==0.14.4",
    "mypy==1.19.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
# `examples` is a repo-root tree, not a package under `src`, so isort cannot infer it (ADR-0009).
known-first-party = ["sdw", "tests", "examples"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests", "examples"]

[[tool.mypy.overrides]]
module = ["soundfile.*", "soxr.*", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sdw --cov-report=term-missing"
